<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity"
        tools:layout_editor_absoluteY="81dp">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionGroup="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/FrameImageDetail"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/enlarge_img"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/iv_poster_detail"
                        android:layout_width="220dp"
                        android:layout_height="331dp"
                        android:layout_margin="16dp"
                        android:onClick="zoom"
                        android:contentDescription="@string/thumbnail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/LabelDetailGreen"
                        android:text="@string/title" />

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TextDetailBoldTextLarge" />

                    <TextView
                        style="@style/LabelDetailGreen"
                        android:text="@string/synopsis" />

                    <TextView
                        android:id="@+id/tv_synopsis"
                        style="@style/TextDetail" />

                    <TextView
                        style="@style/LabelDetailGreen"
                        android:text="@string/voting"/>

                    <TextView
                        android:id="@+id/tv_voting"
                        style="@style/TextDetailBoldTextLarge" />

                    <TextView
                        style="@style/LabelDetailGreen"
                        android:text="@string/release_date"/>

                    <TextView
                        android:id="@+id/tv_release"
                        style="@style/TextDetailBoldTextLarge" />

                    <TextView
                        style="@style/LabelDetailGreen"
                        android:text="@string/trailers"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp" />

                    <TextView
                        android:id="@+id/tv_adapter_no_data_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/no_trailers"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <TextView
                        style="@style/LabelDetailGreen"
                        android:text="@string/reviews" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp" />

                    <TextView
                        android:id="@+id/tv_adapter_no_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:text="@string/no_reviews"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
          </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="saveDeletedData"
            android:src="@drawable/ic_favorite"
            app:backgroundTint="@color/design_default_color_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>